# issue-tracker-lite

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  schema.quiver
.claude/rules/: aipdev.md  docsguide.md
.github/workflows/: ci.yml
cli/: Cargo.toml  build.rs
cli/src/: auth.rs  main.rs  output.rs
cli/src/commands/: acl.rs  comment.rs  component.rs  events.rs  group.rs  hotlist.rs  issue.rs  mod.rs  search.rs
crawler/: package.json  pnpm-lock.yaml  tsconfig.json
crawler/docs/: README.md  tasks.md
crawler/src/: crawl.ts  explore.ts
demo/: Cargo.toml
demo/src/: main.rs  presenter.rs  server_harness.rs
demo/src/pipeline/: access_control.rs  full_lifecycle.rs  groups.rs  hierarchy.rs  hotlists.rs  mod.rs  quickstart.rs  search.rs  security.rs
docs/: API.md  CHANGELOG.md  INDEX.md  codelabs.md  tasks.md  usage.md
docs/specs/: access-control.md  architecture.md  bookmark-group.md  component.md  database-schema.md  hotlist.md  issue.md  notification.md  phases.md  saved-search.md  search.md  tracker.md  user-settings.md
identity/: Cargo.toml
identity/src/: error.rs  lib.rs  provider.rs  row_mapping.rs  sqlite_provider.rs  types.rs  validation.rs
proto/identity/v1/: group.proto
proto/issuetracker/v1/: acl.proto  comment.proto  common.proto  component.proto  event_log.proto  hotlist.proto  issue.proto  search.proto
server/: Cargo.toml  build.rs
server/src/: lib.rs  main.rs
server/src/db/: mod.rs  row_mapping.rs
server/src/domain/: mod.rs  permissions.rs  query_parser.rs  status_machine.rs  types.rs
server/src/service/: acl_service.rs  comment_service.rs  component_service.rs  event_log_service.rs  group_service.rs  health_service.rs  hotlist_service.rs  issue_service.rs  mod.rs  search_service.rs
server/tests/: acl_tests.rs  comment_tests.rs  component_tests.rs  e2e.rs  event_log_tests.rs  group_tests.rs  hotlist_tests.rs  issue_tests.rs  search_tests.rs  validation_tests.rs
server/tests/common/: mod.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs
ui/: package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
ui/docs/: API.md  CHANGELOG.md  README.md  architecture.md  tasks.md
ui/e2e/: demo-runner.ts  issuetracker.spec.ts
ui/server/: grpcClient.ts  index.ts
ui/src/: App.tsx  main.tsx  testIds.ts
ui/src/api/: consoleBindings.ts  demoConsole.ts  types.ts
ui/src/components/: DemoConsole.tsx  formatHelpers.ts
ui/src/pages/: ComponentsPage.tsx  DashboardPage.tsx  EventsPage.tsx  HotlistsPage.tsx  IssueDetailPage.tsx  IssuesPage.tsx  LoginPage.tsx  SearchPage.tsx
ui/src/store/: api.ts  authSlice.ts
