[package]
name = "issuetracker-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "it"
path = "src/main.rs"

[dependencies]
# gRPC
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Output formatting
comfy-table = "7"

# Time
chrono = "0.4"

[build-dependencies]
tonic-build = "0.12"
